@@ -7,6 +7,8 @@
 - added missing Tangular helpers (CRITICAL)
 - disabled snapshots for `LOAD()` method
 - fixed executing `callback` in the `controller.autodestroy()` method
+- added `default_websocket_maxlatency: 2000` configuration item
+- added `F.runscript(filename)` for evaluating of JS scripts
 
 ========================
 0.0.58
